--- a/public/style.css
+++ b/public/style.css
@@ -138,7 +138,7 @@ li.incorrect {
   text-align: center;
 }
 
-/* Leaderboard (průěěné pořadí) */
+/* Leaderboard */
 #leaderboard {
   margin-top: 20px;
   padding: 10px;
